--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                             <div class="publication-links">
                                 <span class="link-block">
                                     <!-- TODO: add arxiv link -->
-                                    <a href="http://arxiv.org/abs/2412.00759" class="external-link button is-normal is-rounded is-dark">
+                                    <a href="https://arxiv.org/abs/2601.15968" class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="ai ai-arxiv"></i>
                                         </span>
@@ -243,16 +243,16 @@
                                         <span class="icon">
                                             <i class="fab fa-github"></i>
                                         </span>
-                                        <span>Code</span>
+                                        <span>Code (Coming soon)</span>
                                     </a>
                                 </span>
                                 <span class="link-block">
-                                  <a href="https://www.youtube.com/watch?v=ohVj3mXnq50"
+                                  <a href="https://www.youtube.com/watch?xxx"
                                       class="external-link button is-normal is-rounded is-dark">
                                       <span class="icon">
                                         😊
                                       </span>
-                                      <span>YouTube</span>
+                                      <span>YouTube (Coming soon)</span>
                                   </a>
                               </span>
                             </div>
