Update BibTeX entry for article citation

--- a/index.html
+++ b/index.html
@@ -537,11 +537,11 @@
         <div class="container is-max-desktop content">
             <h2 class="title">BibTeX</h2>
             <pre><code>
-@article{xin2025hyperalign,
+@article{xin2026hyperalign,
   title={HyperAlign: Hypernetwork for Efficient Test-Time Alignment of Diffusion Models},
   author={Xie, Xin and Guo, Jiaxian and Gong, Dong},
-  journal={arXiv preprint arXiv:2601.xxxxx},
-  year={2024}
+  journal={arXiv preprint arXiv:2601.15968},
+  year={2026}
 }
             </code></pre>
         </div>
