--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 <img src="./static/assets/method/framework.png" alt="pipeline" style="width: 80%;">
                 <div class="content has-text-justified">
                 <p>
-                The framework of HyperAlign. Given a user prompt, the hypernetwork produces step-wise modulation weights $\Delta\theta_t$ that are injected into the generative model to steer the denoising trajectory (top). During training (bottom), the hypernetwork is optimized using the reward loss and the preference-regularization loss, enabling it to produce input-specific adjustments.                </p>
+                The framework of HyperAlign. Given a user prompt, the hypernetwork produces step-wise modulation weights that are injected into the generative model to steer the denoising trajectory (top). During training (bottom), the hypernetwork is optimized using the reward loss and the preference-regularization loss, enabling it to produce input-specific adjustments.                </p>
                 </div>
                 
              </div>
@@ -306,6 +306,23 @@
     
     <br>
     <br>
+
+<div class="columns is-centered has-text-centered">
+    <div class="column is-four-fifths">
+        <h2 class="title is-3">Qualitative Results</h2>
+        <img src="./static/assets/results/supply_flux_align1.png" alt="pipeline" style="width: 80%;">
+        <img src="./static/assets/results/supply_flux_align2.png" alt="pipeline" style="width: 80%;">
+         <br>
+        <div class="content has-text-justified">
+                <caption> The comparison includes the baseline FLUX outputs, the results obtained through HPS-only optimization, and the versions further improved with joint HPS and CLIP objectives.</caption>
+        </div>
+        <br>
+    </div>
+</div>
+
+<br>
+<br>
+
 
     <!--
     <div class="columns is-centered has-text-centered">
